--- a/testbench.yaml
+++ b/testbench.yaml
@@ -7,6 +7,7 @@ migrations:
 
 workbench:
   start: '/'
+  welcome: true
   install: true
   health: false
   discovers:
@@ -24,4 +25,4 @@ workbench:
         --seeder: Workbench\Database\Seeders\DatabaseSeeder
   assets:
     - laravel-assets
-  sync: []
+  sync: [ ]
